
CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend Maintenance = Change is not user facing

## [2016-02-20] [Since 2016-02-06 Integration]
### Added:
- Super admins can now view Pathways as other divisions and roles without logging out
- Admins can now view Pathways as users in their divisions without logging out
- Service to create seeds for a fake database

### Fixed:
- 'Stats' report breaking if procedures don't have any procedure specializations
- Search for bariatric general surgery
- A specialty could be created without all divisions having settings for it
- A new division would not have all of its specialty settings created if Fraser Northwest didn't have settings for all specialties.
- Error in versions#show

## [2016-02-06] [Since 2016-01-30 Integration]
### Added:
- CR #233: Admins can now add Level of Evidence (LOE) scores to resources. (To allow time for data entry, Level of Evidence scores are only visible to administrators when they edit or view a resource.)
- CR #313: Divisional admins and super admins can now easily "copy" news items from other divisions into their division.
- CR #285: Users can now control the profiles of specialists and clinics who "only work out of hospitals and clinics" [Follow up from #256]
- CR #226: Admins can now borrow resources for their division directly from
resource update notification emails [NOTE: This feature can not be demoed on the test site because email is disabled on the test site]

### Changed:
- #317: If a person clicks a link to somewhere on Pathways, but needs to log in first, Pathways will now send the person correctly back to the page link they were trying to visit rather than to the home page.
- News Items edit page tabs are now labeled "Owned (Editable)", "Currently Showing", "Available from Other Divisions"
- Specialist profiles who "only work out of..." now have an icon and fax number in their clinic summaries.

### Fixed: