@@ -5,6 +5,7 @@ class SubscriptionMailer < ActionMailer::Base
     @subscription = Subscription.find(subscription_id)
     @user = @subscription.user
     @interval = @subscription.interval_to_words
+    @interval_phrase = @subscription.interval_phrase
     @email = @user.email
     @activities = activities_for_subscription
 
@@ -21,8 +22,8 @@ class SubscriptionMailer < ActionMailer::Base
 
     mail(
       :to => @subscription.user.email,
-      :from => 'noreply@pathwaysbc.ca',
-      :subject => "Pathways: Your #{@interval} Resource Update"
+      :from => 'Pathways <noreply@pathwaysbc.ca>',
+      :subject => "Pathways: New resources were added #{@interval_phrase} to Pathways [Resource Update]"
     )
   end
 
@@ -30,10 +31,11 @@ class SubscriptionMailer < ActionMailer::Base
     @subscription = Subscription.find(subscription_id)
     @user = @subscription.user
     @interval = @subscription.interval_to_words
+    @interval_phrase = @subscription.interval_phrase
     @email = @user.email
     @activities = activities_for_subscription
 
-    mail(:to => @subscription.user.email, :from => 'noreply@pathwaysbc.ca', :subject => "Pathways: Your #{@interval} News Update")
+    mail(:to => @subscription.user.email, :from => 'noreply@pathwaysbc.ca', :subject => "Pathways: News items added #{@interval_phrase} to Pathways [News Update]")
   end
 
   def immediate_resource_update_email(activity_id, user_id)
@@ -50,7 +52,7 @@ class SubscriptionMailer < ActionMailer::Base
 
     mail(
       :to => @user.email,
-      :from => 'noreply@pathwaysbc.ca',
+      :from => 'Pathways <noreply@pathwaysbc.ca>',
       :subject => "Pathways: #{@division} just added #{@type_mask_description_formatted} to #{@parent_type} [#{@update_classification_type.singularize}] "
     )
   end
@@ -64,7 +66,7 @@ class SubscriptionMailer < ActionMailer::Base
     @type_mask_description_formatted = @activity.type_mask_description_formatted
     @update_classification_type = @activity.update_classification_type
 
-    mail(:to => @user.email, :from => 'noreply@pathwaysbc.ca', :subject => "Pathways: #{@type_mask_description_formatted.capitalize} was just added to #{@division} [#{@update_classification_type.singularize}]")
+    mail(:to => @user.email, :from => 'Pathways <noreply@pathwaysbc.ca>', :subject => "Pathways: #{@type_mask_description_formatted.capitalize} was just added to #{@division} [#{@update_classification_type.singularize}]")
 
   end
 
